--- a/assets/styles/components/swiper.scss
+++ b/assets/styles/components/swiper.scss
@@ -10,7 +10,7 @@
  * Released on: July 26, 2022
  */
 
- $themeColor: #007aff !default;
+ $themeColor: #00416A !default;
  @at-root {
    @font-face {
      font-family: 'swiper-icons';
