--- a/assets/styles/components/_variables.scss
+++ b/assets/styles/components/_variables.scss
@@ -38,10 +38,10 @@ $primary-color: color("materialize-red", "lighten-2") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-$secondary-color: color("yellow", "base") !default;
+$secondary-color: color("blue", "darken-4") !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
-$link-color: color("blue", "lighten-2") !default;
+$link-color: color("light-blue", "darken-1") !default;
 
 
 // 2. Badges
