--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,22 +34,23 @@
 
             <div id="slide-in" class="background_container">
                 {% include "blocks/components/_trigger_button.html.twig" with {
-                    classes: 'btn-floating btn-large btn background_trigger',
+                    classes: 'background_trigger',
                     target: 'slide-in'
                 } %}
                 <div id="caption-border" class="caption js-about">
-                    <div class="background"></div>
-                    <div class="box-caption ">
-                        <div class="text-caption center-align">
-                            <h1><span class="name grey-text"><a class="al" href="{{path('admin')}}">C</a>harlotte Saidi</span>
-                            <span class="sep"></span>
-                            <span class="job light grey-text text-darken-1">Développeuse Web Junior</span></h1>
-                        </div>
-            
-                        <div id="aPropos" class="section scrollspy">
-                            <div class="container">
-                                <div class="row valign-wrapper">
-                                    {% include "blocks/_presentation.html.twig" %}
+                    <div class="background">
+                        <div class="box-caption ">
+                            <div class="text-caption center-align">
+                                <h1><span class="name grey-text"><a class="al" href="{{path('admin')}}">C</a>harlotte Saidi</span>
+                                <span class="sep"></span>
+                                <span class="job light grey-text text-darken-1">Développeuse Web Junior</span></h1>
+                            </div>
+                
+                            <div id="aPropos" class="section scrollspy">
+                                <div class="container">
+                                    <div class="row valign-wrapper">
+                                        {% include "blocks/_presentation.html.twig" %}
+                                    </div>
                                 </div>
                             </div>
                         </div>
