--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -2,11 +2,11 @@
     <div class="container">
         <h6 class="center-align  competences">CONTACT</h6>
         <div class="row">
-            <div class="col s12 l6">
+            <div class="col s12">
                 <p class="center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>, ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
-                <p class="center-align"><button data-target="modal1" class="btn waves-effect waves-green modal-trigger">Envoyer un message</button></p>
+                <p class="center-align"><button data-target="modal1" class="btn btn-large waves-effect waves-green modal-trigger">Envoyer un message</button></p>
             </div>
-            <div class="col s12 l6">
+            <div class="col s12">
                 <p class="center-align">Vous pouvez aussi me retrouver sur les sites suivants :</p>
                 <div class="social">
                     <a class="" href="https://www.linkedin.com/in/charlotte-saidi/" title="Mon Profil LinkedIn" > 
