--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <div class="row row_main">
-        <div class="col s12 l8 right_side">
+        <div class="col s12">
             {% include "blocks/components/svgs/_section-up.html.twig" %}
 
             {% include "blocks/components/_day-night-switch.html.twig" with {
