--- a/assets/styles/front/_main.scss
+++ b/assets/styles/front/_main.scss
@@ -4,7 +4,6 @@
 
 body {
     color: var(--secondary-theme);
-    background-color: var(--main-theme);
     .black-text {
         color: var(--secondary-theme)
     }
@@ -28,30 +27,40 @@ body {
         border-top: rgba(0, 0, 0, .2) 2px solid;
     }
 	font-size: 16px;
-    .main.scrollspy {
-        backdrop-filter: blur(81px);
-    }
     .background {
-        // position: absolute;
-        // background: url('../../../public/images/background/desktop.webp') fixed no-repeat center;
-        // background-size: cover;
+        position: fixed;
         width: 100%;
-        height: 110vh;
-        top: 0;
-        // opacity: .1;
-    }
-    .background::after {
-        content: '';
-        position:absolute;
         height: 100%;
-        right: 0px;
-        width: 0;
-        background: var(--main-theme);
-        background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+        top: 0;
+        z-index: 2;
+        &::after {
+            content: '';
+            position:absolute;
+            height: 100%;
+            right: 0;
+            width: 40px;
+            z-index: 3;
+            background: var(--main-theme);
+            background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+        }
+        &.shrink::after {
+            right: initial;
+            left: 31%;
+
+        }
     }
     .right_side {
+        position:absolute;
+        right:0;
+        background-color: var(--main-theme);
         margin-left: 33.333333% !important;
         padding: 0 !important;
+        transition: all .4s;
+        z-index: 2;
+        &.out {
+            width: 0;
+            overflow: hidden;
+        }
     }
     .row.row_main {
         margin: 0 !important;
@@ -444,6 +453,7 @@ body {
     }
     .name {
         a.al {
+            position: relative;
             color: inherit;
             font-family: inherit;
             cursor: text;
@@ -453,41 +463,31 @@ body {
         font-size: 50px;
     }
     .box-caption {
+        padding-top: 15rem;
         position: absolute;
-        top: 50%;
+        top: 0;
         width: 100%;
         height: 100%;
-        z-index: 2;
         transition: visibility 0.4s, opacity 0.4s linear;
         span {
             display: block;
         }
-        z-index: 2;
-        margin: auto
     }
     .background_container {
-        width: 100%;
         background-color: var(--main-theme);
+        width: 100%;
         position: fixed;
         top:0;
         left:0;
         height:100%;
-        z-index:2;
         transition: all 0.5s;
+        z-index: 1;
         &.shrink {
             width: 33.3333%;
-            .background_trigger {
-                &.out {
-                    right: -1.5rem;
-                }
-            }
-            .background::after {
-                width: 20px;
-            }
         }
     }
     .background_trigger {
-        position: absolute;
+        position: fixed;
         border-radius: 50%;
         text-align: center;
         top: 50%;
@@ -500,6 +500,9 @@ body {
         z-index: 3;
         color: var(--secondary-theme);
         border: 1px solid var(--secondary-theme);
+        &.out {
+            right: 65%;
+        }
     }
     .caption {
         position: relative;
